Cabal-Version:      2.4
Name:               plutus-pioneer-program-week09
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

executable marlowe
  hs-source-dirs:      app
  main-is:             marlowe.hs
  build-depends:       base ^>=4.14.1.0
                     , marlowe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable solution
  hs-source-dirs:      app
  main-is:             solution.hs
  build-depends:       base ^>=4.14.1.0
                     , marlowe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
